--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "otp-input-react": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^5.2.1",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.23.1",
