--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
-    "dotenv": "^16.4.5",
     "firebase": "^10.12.2",
     "otp-input-react": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
@@ -22,8 +22,7 @@
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
-    "react-toastify": "^10.0.5",
-    "web-vitals": "^2.1.4"
+    "react-toastify": "^10.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,6 +49,8 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.3"
+    "react-app-rewired": "^2.2.1",
+    "tailwindcss": "^3.4.3",
+    "web-vitals": "^4.1.1"
   }
 }
